Full view sprites fix, SpriteBox landing page fix
fix: SpritBox images don’t get cut off vertically when there isn't
enough room
fix: click on image now links to home for visitors landing on SpriteBox
page

--- a/client/style.less
+++ b/client/style.less
@@ -259,25 +259,16 @@ img {
 .contentbackground {
 	width: 100%;
 	height:100%;
-	.spriteBoxImage {
+	.spriteBoxFull {
 		width: 100%;
 		height:100%;
 		z-index: 0;
-
-		-webkitflex-grow: 1;
-		flex-grow: 1;
-		
-		display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
-		display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
-		display: -ms-flexbox;					/* TWEENER - IE 10 */
-		display: -webkit-flex;				/* NEW - Chrome */
-		display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */
-		
-		-webkit-justify-content: center;
-		justify-content: center;
-
-		-webkit-align-items: center;
-		align-items: center;
+		text-align: center;
+		display: table;
+		.spriteBoxClose {
+			display: table-cell;
+			vertical-align: middle;
+		}
 	}
 }
 
